# git-stats

./: .gitignore  Cargo.toml  Cross.toml  Makefile
.docker/: Dockerfile
.github/workflows/: checks.yml
co-authors/: Cargo.toml
co-authors/src/: lib.rs
src/: app.rs  author_counts.rs  author_modifications.rs  author_path_counts.rs  main.rs  repo.rs  stringcache.rs  ui.rs
src/ui/: author_counts_view.rs  author_modifications_view.rs  author_path_counts_view.rs  hot_paths_view.rs  mod.rs
