[workspace]
members = [ "co-authors" ]

[package]
name = "git-stats"
version = "0.0.1"
authors = [
    "Martin Junghanns <martin.junghanns@neotechnology.com>",
    "Paul Horn <paul.horn@neotechnology.com>"
]
description = "Print some statistics about your repo"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
clap = "3.0.0-beta.1"
co-authors = { path = "./co-authors" }
color-eyre = "0.5.0"
derive_more = "0.99.9"
eyre = "0.6.0"
fehler = "1.0.0"
fxhash = "0.2.1"
git2 = { version = "0.13.8", default-features = false }
hdrhistogram = { version = "7.1.0", default-features = false }
indexmap = "1.5.1"
itertools = "0.9.0"
maplit = "1.0.2"
once_cell = "1.4.0"
str-utils = "0.1.3"
termion = "1.5.5"
thiserror = "1.0.20"
unicode-width = "0.1.8"

[dependencies.tui]
version = "0.10.0"
features = ["termion"]
git = "https://github.com/knutwalker/tui-rs"
branch = "stackable-bar-chart"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
overflow-checks = true
panic = 'abort'
rpath = false


