[package]
name = "co-authors"
version = "0.1.0"
authors = [
    "Martin Junghanns <nerdfaktor42@mailbox.org>",
    "Paul Horn <developer@knutwalker.de>",
]
description = "Extract co-authors from a commit message."
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/s1ck/git-stats"
repository = "https://github.com/s1ck/git-stats"
categories = ["parser-implementations"]
keywords = ["git", "parser", "co-author"]
workspace = ".."

[dependencies]
nom = "7.1.1"

[dev-dependencies]
test-case = "2.2.1"
